tests/fixtures/sample-js-project-positive/shared/utils/src/errors/uncaught-f059e1a7.ts
export function failing_f059e1a7(): never {
  throw new Error("ouch-f059e1a7");
}
